fix gaps 2

--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,9 @@ pre {
 /* Hyperlinks page specific styles */
 #hyperlinks pre {
     font-size: 24px;
-    line-height: 1;
+    line-height: .5;
     margin: 0;
+    margin-bottom: 0;
     padding: 0;
     display: block;
     transition: color 0.3s ease, transform 0.3s ease;
